[package]
name = "RustyLoader"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.9.0"
clap = { version = "4.5.23", features = ["cargo"] }
libc = "0.2.168"
reqwest = { version = "0.12.9", features = ["blocking"] }
url = "2.5.4"
windows = { version = "0.58.0", features = ["Win32", "Win32_Foundation", "Win32_Security", "Win32_System_Diagnostics_Debug", "Win32_System_Kernel", "Win32_System_Memory_NonVolatile", "Win32_System_Threading", "Win32_System_WindowsProgramming"] }
